--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,12 @@
+
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgba(216, 81, 81, 0.884);
+    background-image: url(./Images/letters.jpg);
+    background-position:50% 50%;
+    background-repeat: no-repeat;
 }
 #mainContainer{
-    background-color: rgb(216,149,81);
+    background-color: rgba(129, 71, 77, 0.849);
     border-radius: 15%;
     position: relative;
     margin: auto;
@@ -11,19 +14,27 @@ body{
     height: 80vh;
 }
 header h1{
+    text-shadow: 2px 2px rgb(0, 0, 0);
     font-family: 'Courier New', Courier, monospace;
     font-size: 60px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(228, 225, 225);
 }
 header p {
+    text-shadow: 2px 2px rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 18px;
+    font-size: 25px;
     text-align: center;
-    color: rgb(0, 0, 0);
+    color: rgb(228, 225, 225);
 }
 #radioDiv{
     text-align: center;
+}
+label{
+    color: rgb(228, 225, 225);
+    text-shadow: 2px 2px rgb(0, 0, 0);
+    font-weight: 500;
+    font-size: 20px;
 }
 #radioDiv input{
     margin-left: 15px;
@@ -49,7 +60,7 @@ textarea{
 }
 
 #submitDiv input:active{
-    box-shadow: 1px 3px rgb(201,45,45)
+    box-shadow: 1px 5px rgb(34, 16, 8);
 }
 #extraInput{
     text-align: center;
