--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,59 @@
-body{
-    background-image: url(./Images/letters.jpg);
-    background-position:50% 50%;
-    background-repeat: no-repeat;
+* {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+
+}
+html,body{
     font-family: Arial, Helvetica, sans-serif;
+    margin: 0;
+    padding: 0;
+    height: 100vh;
 }
 #extraInput{
     margin-top: 10px;
     text-align: center;
 }
+
+#extraInput input{
+    width: 10em;
+    height: 2em;
+}
+#imageContainer{
+    background-image: url(./Images/letters.jpg);
+    background-size: cover;
+    height: 100%;
+}
+
+
 #mainContainer{
     background-color: rgba(129, 71, 77, 0.849);
-    border-radius: 15%;
+    border-radius: 10%;
+    width: 50%;
+    height: 50%;
     margin: auto;
-    height: 80vh;
-    position: relative;
-    width: 80vh;   
+    position: absolute;
+    top: 0; left: 0; bottom: 0; right: 0;
 }
 header h1{
+    margin-top: 5%;
     color: rgb(228, 225, 225);
     font-family: 'Courier New', Courier, monospace;
-    font-size: 60px;
+    font-size: 2em;
     text-align: center;
     text-shadow: 2px 2px rgb(0, 0, 0);  
 }
 header p {
     color: rgb(228, 225, 225);
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 25px;
+    font-size: 1em;
     text-align: center;
     text-shadow: 2px 2px rgb(0, 0, 0);
 }
 label{
     color: rgb(228, 225, 225);
-    font-size: 20px;
+    font-size: 1em;
     font-weight: 500;
     text-shadow: 2px 2px rgb(0, 0, 0);  
 }
@@ -57,13 +78,217 @@ label{
     box-shadow: 1px 5px rgb(34, 16, 8);
 }
 #textareaDiv{
-    margin-top: 5%;
+    margin-top: 1em;
     text-align: center;
+    position: relative;
+    
 }
 textarea{
-    border-radius: 2%;
-    height: 300px;
     margin-top: 10px;
     width: 80%;
+
 }
 
+@media(min-width: 320px){
+
+    #extraInput input{
+        width: 6em;
+        height: 1.5em;
+    }
+
+    header h1{
+        font-size: 2em;
+    }
+    
+
+    header p{
+        font-size: 0.8em;
+    }
+
+    label{
+        font-size: 0.8em;
+    }
+
+    #mainContainer{
+        height: 60vh;
+        width: 80%;
+    }
+
+    textarea{
+        border-radius: 2%;     
+        margin-top: 10px;
+        width: 80%;
+        height: 10em;
+    
+    }
+
+    #submitDiv input{
+        border-radius: 15%;
+        height: 2em;
+        width: 4em; 
+    }
+}
+
+@media (min-width: 360px){
+
+    #extraInput input{
+        width: 8em;
+        height: 1.8em;
+    }
+
+    header h1{
+        font-size: 2em;
+    }
+
+    header p{
+        font-size: 0.8em;
+    }
+
+    label{
+        font-size: 0.8em;
+    }
+    
+
+    #mainContainer{
+        width: 80%;
+        height: 380px;
+    }
+    
+    textarea{
+        border-radius: 2%;     
+        margin-top: 10px;
+        width: 80%;
+        height: 15em;
+
+    
+    }
+
+}
+
+@media (min-width: 400px){
+    header h1{
+        font-size: 2em;
+    }
+
+    header p{
+        font-size: 1em;
+    }
+
+    label{
+        font-size: 0.9em;
+    }
+
+    #mainContainer{
+        width: 80%;
+        height: 450px;
+        top: 5%;
+    }
+
+    textarea{
+        border-radius: 2%;     
+        margin-top: 10px;
+        width: 80%;
+        height: 18em;
+    }
+}
+
+@media (min-width: 500px){
+    header h1{
+        font-size: 3em;
+    }
+
+    header p{
+        font-size: 1em;
+    }
+
+    label{
+        font-size: 1em;
+    }
+
+    #mainContainer{
+        width: 80%;
+        height: 550px;
+    }
+
+    textarea{
+        height: 20em;
+    }
+}
+
+
+
+@media(min-width: 700px){
+    header h1{
+        font-size: 4em;
+    }
+    header p{
+        font-size: 1.5em;
+    }
+    label{
+        font-size: 1.3em;
+    }
+    #mainContainer{
+        width: 80%;
+        height: 700px;
+    }
+    textarea{
+        height: 25em;
+    }
+
+    #submitDiv input{
+        border-radius: 15%;
+        height: 3em;
+        width: 5em; 
+    }
+}
+
+@media (min-width: 1000px) {
+
+    h1{
+        font-size: 6em;
+    }
+
+    header p{
+        font-size: 1.5em;
+    }
+    label{
+        font-size: 1.3em;
+    }
+    #mainContainer{
+        width: 70%;
+        height: 80vh;
+    }
+
+    textarea{
+        height: 30em;
+    }
+
+    #submitDiv input{
+        border-radius: 15%;
+        height: 4em;
+        width: 6em; 
+    }
+}
+
+@media (min-width: 1500px) {
+
+    h1{
+        font-size: 4em;
+    }
+
+    header p{
+        font-size: 1.5em;
+    }
+    label{
+        font-size: 1.3em;
+    }
+    #mainContainer{
+        width: 60%;
+        height: 90vh;
+        top: 5%;
+    }
+
+    textarea{
+        height: 35em;
+    }
+}
